tests/endtoend/failure/expected/error_arrayreturn.compile.out
error_arrayreturn.silly:1:24: error: parse error: mismatched input '[' expecting ';'
    1 | FUNCTION foo( ) : INT32[4]
      |                        ^
error_arrayreturn.silly:5:5: error: parse error: extraneous input 'RETURN' expecting {<EOF>, COMMENT_SKIP_RULE, 'INT8', 'INT16', 'INT32', 'INT64', 'FLOAT32', 'FLOAT64', 'BOOL', 'FOR', 'IF', 'PRINT', 'ERROR', 'ABORT', 'GET', 'EXIT', 'STRING', 'FUNCTION', 'CALL', IDENTIFIER}
    5 |     RETURN r;
      |     ^
error_arrayreturn.silly:5:13: error: parse error: mismatched input ';' expecting '='
    5 |     RETURN r;
      |             ^
error_arrayreturn.silly:6:1: error: parse error: extraneous input '}' expecting {<EOF>, COMMENT_SKIP_RULE, 'INT8', 'INT16', 'INT32', 'INT64', 'FLOAT32', 'FLOAT64', 'BOOL', 'FOR', 'IF', 'PRINT', 'ERROR', 'ABORT', 'GET', 'EXIT', 'STRING', 'FUNCTION', 'CALL', IDENTIFIER}
    6 | };
      | ^
